[package]
name = "static-events"
version = "0.1.2"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]

description = "A library for creating zero-cost event systems."
keywords = ["events", "static"]
categories = ["rust-patterns"]

documentation = "https://docs.rs/static-events/"
repository = "https://github.com/Lymia/static-events"
readme = "README.md"

license = "MIT/Apache-2.0"

[dependencies]
unhygienic = "0.1"
