[package]
name = "static-events_derive"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "An internal helper crate for static-events."

documentation = "https://docs.rs/static-events/"
repository = "https://github.com/Lymia/static-events"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.2.0"
quote = "0.6.9"
rand = "0.6.4"
syn = { version = "0.15.18", features = ["extra-traits", "full"] }
proc-macro2 = { version = "0.4.20", features = ["nightly"] }
