[package]
name = "static-events_derive"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "An internal helper crate for static-events."

documentation = "https://docs.rs/static-events/"
repository = "https://github.com/Lymia/static-events"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.10.2"
lazy_static = "1.2"
quote = "1.0"
rand = "0.7"
syn = { version = "1.0", features = ["extra-traits", "full"] }
proc-macro2 = "1.0"
