[package]
name = "static-events_derive"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "An internal helper crate for static-events. Not public API."

documentation = "https://docs.rs/static-events/"
repository = "https://github.com/Lymia/static-events"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
static-events_internals = { version = "0.1.0", path = "../static-events_internals" }