[package]
name = "static-events_internals"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "An helper crate for procedural derives based off static-events. Public API but not particularly stable."

documentation = "https://docs.rs/static-events/"
repository = "https://github.com/Lymia/static-events"

license = "MIT/Apache-2.0"

[dependencies]
darling = "0.10.2"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
proc-macro2 = "1.0"
